<resources>
    <string name="app_name">TicTacToe v2</string>

    <string name="top_header">Hey Gamers</string>
    <string name="status_bar">Please Tap To Start</string>
    <string name="grid_image">Grid Image View</string>

    <string name="zero_x_image1">0/X image01</string>
    <string name="zero_x_image2">0/X image02</string>
    <string name="zero_x_image3">0/X image03</string>
    <string name="zero_x_image4">0/X image04</string>
    <string name="zero_x_image5">0/X image05</string>
    <string name="zero_x_image6">0/X image06</string>
    <string name="zero_x_image7">0/X image07</string>
    <string name="zero_x_image8">0/X image08</string>
    <string name="zero_x_image9">0/X image09</string>

    <string name="tag_image1">0</string>
    <string name="tag_image2">1</string>
    <string name="tag_image3">2</string>
    <string name="tag_image4">3</string>
    <string name="tag_image5">4</string>
    <string name="tag_image6">5</string>
    <string name="tag_image7">6</string>
    <string name="tag_image8">7</string>
    <string name="tag_image9">8</string>

    <string name="x_player_turn">X\'s Turn, Please Tap</string>
    <string name="zero_player_turn">0\'s Turn, Please Tap</string>

    <string name="zero_player_won">0 Won, Please Tap To Restart</string>
    <string name="x_player_won">X Won, Please Tap To Restart</string>
    <string name="game_draw">Game Draw, Please Tap To Restart</string>



</resources>