<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="cursive"
        android:text="@string/top_header"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/grid_image"
        app:layout_constraintBottom_toTopOf="@+id/statusBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text_view"
        app:srcCompat="@drawable/grid" />

    <TextView
        android:id="@+id/statusBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="monospace"
        android:text="@string/status_bar"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="340dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/zero_x_image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image1"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image1"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/zero_x_image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image2"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image2" />

            <ImageView
                android:id="@+id/zero_x_image3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image3"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/zero_x_image4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image4"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image4"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/zero_x_image5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image5"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image5" />

            <ImageView
                android:id="@+id/zero_x_image6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image6"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/zero_x_image7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image7"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image7"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/zero_x_image8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image8"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image8" />

            <ImageView
                android:id="@+id/zero_x_image9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zero_x_image9"
                android:onClick="tapPlayer"
                android:padding="25dp"
                android:tag="@string/tag_image9" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>